<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_screen_main_layout_padding"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/ic_workout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/flStart"
        android:contentDescription="@string/image" />

    <FrameLayout
        android:id="@+id/flStart"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@+id/myImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/item_color_accent_border_ripple_background"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textColor="@color/text"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/flBMI"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/flStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/flHistory"
        android:background="@drawable/item_circular_color_accent_background"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@id/flBMI"
        app:layout_constraintStart_toStartOf="@id/flBMI"
        app:layout_constraintEnd_toEndOf="@id/flBMI"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <FrameLayout
        android:id="@+id/flHistory"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/flStart"
        app:layout_constraintStart_toEndOf="@id/flBMI"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/item_circular_color_accent_background"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_history_24"
            android:layout_gravity="center"/>

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/history"
        app:layout_constraintTop_toBottomOf="@id/flBMI"
        app:layout_constraintStart_toStartOf="@id/flHistory"
        app:layout_constraintEnd_toEndOf="@id/flHistory"
        android:textSize="16sp"
        android:textStyle="bold"/>



</androidx.constraintlayout.widget.ConstraintLayout>